Added code to UpdateCoveringWidgets to take into account hidden views when considering whether a view completely covers the invalidated rect. bug 100652 r=roc+moz@mozilla.org sr=attinasi@netscape.com